--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laiba Chaudhry Portfolio</title>
-    <link rel="stylesheet" href="./assets/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <style>
         body{
-            background-image: url(assets/images/lightbg.png);
+            background-image: url(lightbg.png);
             min-height: 500px;
             background-attachment: fixed;
             background-position: center;
@@ -63,7 +63,7 @@
         <div class="container">
             <div class="row gy-4 align-items-center">
                 <div class="col-lg-5">
-                    <img data-aos="fade-down" data-aos-delay="200" src="./assets/images/hcj.png"  class="img-fluid "  alt="">
+                    <img data-aos="fade-down" data-aos-delay="200" src="hcj.png"  class="img-fluid "  alt="">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="fw-bold display-4 " data-aos="fade-up">I AM A CREATIVE<br/> <span class="fw-bold display-4 text-info" >WEB DESIGNER</span></h1>
@@ -220,21 +220,21 @@
             <div class="row gy-4">
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="service border-hover p-4 shadow rounded-5">
-                        <div class="icon rounded-4"><i  ><img style="border-radius: 15px;" src="/assets/images/code.png" height="45px" alt=""></i></div>
+                        <div class="icon rounded-4"><i  ><img style="border-radius: 15px;" src="code.png" height="45px" alt=""></i></div>
                         <h5 class="mt-4 fw-bold">Front End Development</h5>
                         <p class="mb-0">I can create eye-catching Website designs with HTML, CSS and JavaScript                      </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="service border-hover p-4 shadow rounded-5">
-                        <div class="icon rounded-4"><i  ><img style="border-radius: 15px;" src="/assets/images/db2.png" height="45px" alt=""></i></div>
+                        <div class="icon rounded-4"><i  ><img style="border-radius: 15px;" src="db2.png" height="45px" alt=""></i></div>
                         <h5 class="mt-4 fw-bold">Database Design</h5>
                         <p class="mb-0">I can create Database of a website or a software purely with MySQL                       </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="service border-hover p-4 shadow rounded-5">
-                        <div class="icon rounded-4"><i  ><img style="border-radius: 15px;" src="/assets/images/ui.png" height="45px" alt=""></i></div>
+                        <div class="icon rounded-4"><i  ><img style="border-radius: 15px;" src="ui.png" height="45px" alt=""></i></div>
                         <h5 class="mt-4 fw-bold">UI/UX</h5>
                         <p class="mb-0">I can create attractive designs according to user needs with Figma and Photoshop                     </p>
                     </div>
@@ -369,8 +369,8 @@
     </footer>
 
 
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./assets/js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
